...
    override func viewDidLoad() {
        super.viewDidLoad()
        configureUI()
    }
    
    private func configureUI() {
        let editingButton = UIBarButtonItem(title: "Выйти", style: .plain, target: self, action: #selector(logout))
        self.navigationItem.setRightBarButton(editingButton, animated: true)
        self.profileEditorView.changeButton.addTarget(self, action: #selector(changeData), for: .touchUpInside)
    }
    
    @objc
    private func changeData() {
...
