...
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f4s-IS-4jv">
                                <rect key="frame" x="185" y="304" width="44" height="30"/>
                                <state key="normal" title="Войти"/>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Авторизация" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GZz-JJ-eZ3">
                                <rect key="frame" x="121" y="79" width="172" height="35"/>
                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
...
